<resources>
    <string name="app_name">Layouts_example</string>
    <string name="first_name">First name:</string>
    <string name="enter_name">Enter First Name</string>
    <string name="last_name">Last name:</string>
    <string name="enter_last_name">Enter Last name</string>
    <string name="submit">Submit</string>
    <string name="relative_layout">Relative Layout</string>
    <string name="linear_layout">Linear Layout</string>
    <string name="username">Username</string>
    <string name="enter_username">Enter Username</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter Password</string>
    <string name="login">Login</string>
    <string name="reply_label">Replay</string>
    <string name="productdiscription">New Apple iPhone 15 Plus. 48MP main camera with 2x Telephoto and up to 4x resolution. USB-C connector. All-day battery life up to 26hrs video playback. Safety features include Roadside Assistance and Emergency SOS via satellite, plus Crash Detection. Dynamic Island for alerts and Live Activities. Color-infused glass and aluminum design making it incredibly durable. A16 Bionic chip.</string>
    <string name="txt_noti">Welcome To GeeksforGeeks</string>
    <string name="enter_otp">Enter Otp</string>
    <string name="enter_otp_edt">Enter Otp</string>
    <string name="add_to_cart">ADD To Cart</string>
    <string name="todo">TODO</string>
</resources>