<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LinearActivity"
    android:gravity="center"
    android:orientation="vertical">
    <LinearLayout
        android:id="@+id/title_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="UselessLeaf">
        <TextView
            android:id="@+id/txt_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/linear_layout"
            android:layout_gravity="center"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:layout_marginTop="20dp"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/form_layout" android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="vertical" tools:ignore="UselessLeaf">
        <LinearLayout
            android:id="@+id/username_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/txt_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:layout_marginStart="60dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"/>
            <EditText
                android:id="@+id/edt_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="emailAddress"
                android:hint="@string/enter_username"
                android:layout_marginTop="20dp"
                android:inputType="text"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_marginEnd="25dp"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/password_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/txt_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:layout_marginStart="60dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"/>
            <EditText android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="emailAddress"
                android:hint="@string/enter_password"
                android:layout_marginTop="20dp"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_marginEnd="25dp"/>
        </LinearLayout>
        <Button android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/login"
            android:textSize="20sp"
            android:textStyle="bold"/>
    </LinearLayout>
</LinearLayout>