<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OtpLoginActivity"
    android:background="@drawable/baseline_message_24"
    android:orientation="vertical"
    >
<LinearLayout
    android:id="@+id/linear_layout_id"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:layout_marginTop="150dp"
    >
    <TextView
        android:id="@+id/txt_otp_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_otp"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        />

    <EditText
        android:id="@+id/edt_otp"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/enter_otp_edt"
        android:textSize="20sp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="55dp"
        android:inputType="number"
        android:textColor="@color/black"
        />
    
    <Button
        android:id="@+id/btn_otp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:background="@color/black"
        android:backgroundTint="@color/black"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:layout_marginTop="50dp"
        android:textStyle="bold"
        />
</LinearLayout>
</LinearLayout>